--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Gitee 帮助中心
-    url: https://gitee.com/help
-    about: 提供Git使用教程和常见问题解答
+  - name: GitHub 帮助文档
+    url: https://docs.github.com
+    about: 官方GitHub文档和使用教程
 
 templates:
   - name: 功能建议
